fix: change aothorization alignment

--- a/src/global.scss
+++ b/src/global.scss
@@ -24,7 +24,7 @@ html {
 
 a {
     text-decoration: none !important;
-    color: black;
+    color: $reg-color;
 }
 
 h1 {
@@ -45,7 +45,7 @@ h1 {
 }
 .fixed_center {
     position: fixed;
-    top: 40%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -88,13 +88,10 @@ h1 {
     font-size: 1rem;
 }
 
-
-
 .footer {
     width: 100%;
     height: auto;
     background-color: $footer-bg;
-    z-index: 95;
     display: flex;
     justify-content: space-between;
     align-items: center;
